in progress: updating DOM with new user info

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1051,12 +1051,28 @@ html{
   height: 20%;
 }
 
+.h-24{
+  height: 6rem;
+}
+
 .w-96{
   width: 24rem;
 }
 
 .w-full{
   width: 100%;
+}
+
+.w-4\/5{
+  width: 80%;
+}
+
+.w-24{
+  width: 6rem;
+}
+
+.flex-row{
+  flex-direction: row;
 }
 
 .flex-col{
@@ -1085,9 +1101,34 @@ html{
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
 .bg-base-100{
   --tw-bg-opacity: 1;
   background-color: hsl(var(--b1) / var(--tw-bg-opacity));
+}
+
+.bg-base-200{
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--b2, var(--b1)) / var(--tw-bg-opacity));
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .text-center{
@@ -1099,8 +1140,22 @@ html{
   line-height: 1;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .font-\[900\]{
   font-weight: 900;
+}
+
+.font-bold{
+  font-weight: 700;
 }
 
 .uppercase{
