--- a/public/results.pug
+++ b/public/results.pug
@@ -16,8 +16,9 @@ body.mx-2.my-10.bg-base-100.text-neutral.flex.flex-col.justify-center.items-cent
         |  Stats Retriever
     main(class='w-4/5')
     div.p-6.rounded-xl.bg-base-200
-        div.flex.flex-row.justify-center.items-center
-            img.w-24.h-24
+        div.flex.flex-row.justify-center.items-center.space-x-6
+            img.w-24.h-24(src=image)
             div.flex.flex-col.justify-center.items-center
-                p.font-bold.text-xl username
+                p.font-bold.text-2xl= username
                 p.text-lg user info
+                p= user
