user info / top tracks view completed

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1194,6 +1194,10 @@ h2{
   height: 4rem;
 }
 
+.min-h-screen{
+  min-height: 100vh;
+}
+
 .w-4\/5{
   width: 80%;
 }
@@ -1216,6 +1220,14 @@ h2{
 
 .grid-cols-5{
   grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-rows-1{
@@ -1244,6 +1256,14 @@ h2{
 
 .gap-2{
   gap: 0.5rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
+}
+
+.gap-1{
+  gap: 0.25rem;
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]){
@@ -1278,6 +1298,10 @@ h2{
 
 .rounded-3xl{
   border-radius: 1.5rem;
+}
+
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .bg-base-100{
