--- a/public/results.pug
+++ b/public/results.pug
@@ -9,30 +9,32 @@ head
     link(rel='icon' type='image/png' sizes='32x32' href='favicon/favicon-32x32.png')
     link(rel='icon' type='image/png' sizes='16x16' href='favicon/favicon-16x16.png')
     link(rel='manifest' href='favicon/site.webmanifest')
+    base(target="_blank")
 
-body.mx-2.my-10.bg-base-100.text-neutral.flex-col.flex-center.h-screen.space-y-6
+body.mx-2.my-10.bg-base-100.text-neutral.flex-col.flex-center.min-h-screen.space-y-6
     //- begin header
     h1.text-center.uppercase.text-6xl(class='h-1/5')
         span.text-primary(class='font-[900]') LastFM
         |  Stats Retriever
     //- begin main content + container div
     main(class='w-4/5')
-    div.flex-col.flex-center
-        //- begin user info container
-        h2 user info
-        div.rounded-xl.p-6.bg-base-200.flex-row.flex-center.space-x-6
-            img.w-24.h-24.rounded-full.ring-4.ring-primary.ring-offset-4.ring-offset-base-200(src=image)
-            div.flex-col.flex-center.text-left
-                p.font-bold.text-2xl: a(href=url class="hover:underline").text-primary.decoration-secondary.decoration-2.underline-offset-4= username
-                p.text-lg user play count: #[b= plays]
-        //- begin track info container
-        h2 top tracks
-        .grid.grid-cols-5.grid-rows-1.gap-4
-        each track in tracks
-            .bg-base-200.flex-row.flex-center.space-x-4.p-4.rounded-xl
-                img.w-16.h-16.rounded-sm(src=track.image)
-                p: a(href=track.url)= name
-                p: a(href=track.artist.url)= track.artist.name
+        div.flex-col.flex-center.gap-6
+            //- begin user info container
+            h2 user info
+            div.rounded-xl.p-6.bg-base-200.flex-row.flex-center.space-x-6
+                img.w-24.h-24.rounded-full.ring-4.ring-primary.ring-offset-4.ring-offset-base-200(src=image)
+                div.flex-col.flex-center.text-left
+                    p.font-bold.text-2xl: a(href=url class="hover:underline").text-primary.decoration-secondary.decoration-2.underline-offset-4= username
+                    p.text-lg user play count: #[b= plays]
+            //- begin track info container
+            h2 top tracks
+            .grid.grid-cols-3.gap-4.w-full 
+                each track in tracks 
+                    .bg-base-200.rounded-xl.p-4.grid.grid-cols-2.items-center 
+                        img.w-16.h-16.rounded(src=track.image)
+                        .flex.flex-col 
+                            p.font-bold: a(href=track.url)= track.name
+                            p: a(href=track.artist.url)= track.artist.name
                 
     //--------------------
     //- begin resubmit form
