update results view

--- a/public/results.pug
+++ b/public/results.pug
@@ -14,7 +14,7 @@ head
 body.mx-2.my-10.bg-base-100.text-neutral.flex-col.flex-center.min-h-screen.space-y-6
     //- begin header
     h1.text-center.uppercase.text-6xl(class='h-1/5')
-        span.text-primary(class='font-[900]') LastFM
+        span.text-primary(class='font-[900]'): a(href="/") LastFM
         |  Stats Retriever
     //- begin main content + container div
     main(class='w-4/5')
