--- a/public/css/input.css
+++ b/public/css/input.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Spline+Sans:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Spline+Sans:wght@300;400;500;600;700&family=Source+Code+Pro&display=swap");
 
 @tailwind base;
 @layer base {
